	
	Gross renaming: cObject became cOwnedObject, cPolymorphic became cObject;
	  - cNamedObject introduced in between.
	  - cArray, cQueue still handle cObject (old cPolymorphic), i.e. they can work
	    with non-owned objects as well

	Introduced cComponent, a common base class for cModule and cChannel

	cSimpleModule, cSimulation:
	- removed: pause(), backtomod, pause_in_sendmsg
	- removed: breakpoint(), and its callback method in cEnvir, in Tkenv, etc..
	- sendDirect(): added overloaded methods that accept transmissionDelay as well

	cModule:
	- removed backgroundDisplayString()/setBackgroundDisplayString() and its compat
	  #defines displayStringAsParent() and setDisplayStringAsParent()

	Message parameters:
	- deprecated; type changed: cMsgPar instead of cPar
	- cMsgPar is the same as the old cPar, but features which are not needed for message parameter objects have been removed:
	  - removed support for interactively prompting the user for a value: input flag, prompt, read() method
	  - removed indirection (redirection) support
	  - removed support for storing expressions

	recordScalar() methods (cSimpleModule, cStatistic):
	- added optional "const char *unit" argument
	- moved to cComponent!
	- see also: **.save-as-scalar = true

	cMessageHeap:
	- renamed getFirst() to removeFirst(), and get(cMessage*) to remove(cMessage*)
	cPar implementation changed

	cPar, etc:
	- setFromText() -> parse()
	- getAsText() -> toString()
	- also cDisplayString: getString() -> toString() (old getString() deprecated)
	NOTE: inconsistency with INET Framework: IPAddress, IPv6Address, MACAddress: str()

	- cBag class removed

	- global connect() function removed (use cGate::connectTo() instead!)

	- global findXXX(const char *name) functions turned into static cXXX::find(const char *name);
	   - findLink()
	   - findFunction
	   - findEnum
	   - findChannelType
	   - findNetworkType()
	   - findModuleType()
	    findModuleType() left for compatibility
