@@ -67,13 +67,13 @@ void cLinkDelayLookahead::startRun()
     ev << "  calculating minimum link delays..." << endl;
     for (int modId=0; modId<=sim->lastModuleId(); modId++)
     {
-        cPlaceHolderModule *mod = dynamic_cast<cPlaceHolderModule *>(sim->module(modId));
+        cPlaceholderModule *mod = dynamic_cast<cPlaceholderModule *>(sim->module(modId));
         if (mod)
         {
             for (int gateId=0; gateId<mod->gates(); gateId++)
             {
                 // if this is a properly connected proxygate, process it
-                // FIXME leave out gates from other cPlaceHolderModules
+                // FIXME leave out gates from other cPlaceholderModules
                 cGate *g = mod->gate(gateId);
                 cProxyGate *pg  = dynamic_cast<cProxyGate *>(g);
                 if (pg && pg->fromGate() && pg->getRemoteProcId()>=0)
